--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <h2>喜欢的电视剧</h2>
       <div class="imagea">
-          <img src= "qianxun.webp"  title="实习医生格蕾"/>
+          <img src= "img/qianxun.webp"  title="实习医生格蕾"/>
       </div>  
       <div class="imagea">
           <img src= "https://upload.wikimedia.org/wikipedia/zh/a/a4/Friends_ver6.jpg" title="Friends"/>
